--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -11,8 +11,7 @@
         justify-content: center
 
     &-items
-        margin: 5px
-        padding: 10px
+        padding: 5px
         
 
     &-item
@@ -21,8 +20,21 @@
         align-items: center
         padding: 15px 0px
 
+        .icon
+            padding: 10px
+            border-radius: 10px
+
         span
             padding: 0px 10px
+
+.blue
+    background: #2B8BDA
+
+.green
+    background: #6DF9BE
+
+.red
+    background: #ED7F7A
 
 .active
     width: 250px
