--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -25,10 +25,11 @@
             border-radius: 10px
 
         span
+            font-size: 25px
             padding: 0px 10px
 
 .blue
-    background: #2B8BDA
+    background: #2C96F2
 
 .green
     background: #6DF9BE
