--- a/src/App.sass
+++ b/src/App.sass
@@ -4,6 +4,10 @@
     width: 100vw
     height: 100vh
 
+a
+    text-decoration: none
+    color: #000
+
 ul
     width: 100%
     margin: 0
@@ -13,6 +17,7 @@ ul
         width: 100%
 
 .page-wrapper
+    overflow-y: auto
     width: 100%
     height: 100%
     padding: 25px
