--- a/src/App.sass
+++ b/src/App.sass
@@ -20,4 +20,14 @@ ul
     overflow-y: auto
     width: 100%
     height: 100%
-    padding: 25px
+    padding: 50px
+
+.flex
+    display: flex
+
+    &-center
+        justify-content: center
+        align-items: center
+
+    &-space-beetwen
+        justify-content: space-between
