--- a/src/components/Switch/SwitchCheckbox.sass
+++ b/src/components/Switch/SwitchCheckbox.sass
@@ -9,18 +9,21 @@
   align-items: center
   justify-content: space-between
   cursor: pointer
-  width: 50px
-  height: 100px
   background: grey
   border-radius: 100px
   position: relative
   transition: background-color .2s
 
+.label-vertical
+  width: 50px
+  height: 100px
+
+.label-horizontal
+  width: 100px
+  height: 50px
 
 .react-switch-button 
   position: absolute
-  bottom: 3px
-  left: 3px
   width: 44px
   height: 44px
   border-radius: 44px
@@ -28,11 +31,27 @@
   background: #fff
   box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29)
 
+.button-vertical
+  bottom: 3px
+  left: 3px
 
-.react-switch-checkbox:checked + .react-switch-label .react-switch-button 
+.button-horizontal
+  top: 3px
+  left: 3px
+
+.react-switch-checkbox:checked + .label-vertical .button-vertical 
   bottom: calc(100% - 3px)
   transform: translateY(100%)
 
 
-.react-switch-label:active .react-switch-button 
+.label-vertical:active .button-vertical 
   height: 60px
+
+
+.react-switch-checkbox:checked + .label-horizontal .button-horizontal
+  left: calc(100% - 3px)
+  transform: translateX(-100%)
+
+
+.label-horizontal:active .button-horizontal
+  width: 60px
