--- a/src/App.sass
+++ b/src/App.sass
@@ -26,8 +26,16 @@ ul
     display: flex
 
     &-center
+        display: flex
         justify-content: center
         align-items: center
 
+        &-column
+            display: flex
+            justify-content: center
+            align-items: center
+            flex-direction: column
+
     &-space-beetwen
         justify-content: space-between
+
