--- a/src/components/Input/Input.sass
+++ b/src/components/Input/Input.sass
@@ -4,4 +4,7 @@
     padding: 10px
     margin: 10px 0px
     font-size: 1em
-    border: 2px solid #4854ff
+    border: none
+    outline: none
+    border: 1px solid #7a7a7a
+    box-shadow: 0px 1px 10px 2px rgba(34, 60, 80, 0.08)
