--- a/src/components/Modals/Modal.sass
+++ b/src/components/Modals/Modal.sass
@@ -11,6 +11,9 @@
 
 .modal
     
+    &-content
+        margin-top: 25px
+
     .card
         min-height: 150px
         min-width: 300px
@@ -33,18 +36,22 @@
 
         button
             outline: none
-            border-radius: 15px
+            border-radius: 5px
             background: #fff
-            border: 2px solid #5480FC
+            border: 1px solid #5480FC
             padding: 10px
             box-shadow: 0px 1px 10px 2px rgba(34, 60, 80, 0.08)
             cursor: pointer
             margin: 10px
             font-size: 1em
+            transition: 0.5s color
 
             &:first-child
                 margin-left: 0px
             &:last-child
                 margin-right: 0px
+
+            &:hover
+                color: #5480FC
 
         
