--- a/src/styles/Home.sass
+++ b/src/styles/Home.sass
@@ -1,36 +1,18 @@
-
-.actions
-    padding: 15px 0px
+.layout
     width: 100%
+    height: 100%
     display: flex
-    justify-content: space-between
+    flex: 1 
 
-.rooms
-    display: flex
-    flex-wrap: wrap
-    margin: -30px
-
+.content
+    width: 100%
+    margin-right: 25px
+    
+.card-layout
     .card
-        cursor: pointer
-        margin: 30px
-        flex: 1
-        height: 400px
-        max-width: 25%
+        margin: 15px
 
-        &-icon
-            height: 270px
-            width: 100%
-            display: flex
-            justify-content: center
-            align-items: center
-
-        &-title
-            font-weight: bold
-            font-size: 32px
-            text-align: center
-
-        &-description
-            text-align: center
-            font-size: 20px
-            color: gray
-
+    .card:first-child
+        margin-left: 0
+    .card:last-child
+        margin-right: 0      
