--- a/src/App.sass
+++ b/src/App.sass
@@ -36,6 +36,6 @@ ul
             align-items: center
             flex-direction: column
 
-    &-space-beetwen
+    &-space-between
         justify-content: space-between
 
